# AIMLPractice

./: .gitignore  Task_PCA.ipynb  hello.ipynb  learning-langgraph.ipynb
AmazonMLChallenge/: amazonmlchallengenotebook.ipynb
DL LAB SEM6/: Exp1.ipynb  Exp1.py  Exp10.py  Exp2.py  Exp3.ipynb  Exp3.py  Exp4.py  Exp5.py  Exp6.py  Exp7.py  Exp8.py  Exp9.py
Deep Learning/: Batch_vs_stochastic_GD.ipynb  Perceptron.ipynb  age_gender.ipynb  backpropagation_classification.ipynb  backpropagation_regression.ipynb  batch_norm_example.ipynb  dropout_classification_example.ipynb  mnist_classification.ipynb  perceptron_lossfunction.ipynb  regularization.ipynb  (+3 more)
RAG Agentic AI Tool/: README.md  implementation_plan.md  pyproject.toml  requirements-kaggle.txt
RAG Agentic AI Tool/config/: chunking.yaml  models.yaml  retrieval.yaml  settings.py
RAG Agentic AI Tool/notebooks/: 01_rag_research_pipeline.ipynb
RAG Agentic AI Tool/scripts/: generate_eval_data.py  run_benchmarks.py  setup_models.py
RAG Agentic AI Tool/src/: __init__.py
RAG Agentic AI Tool/src/agent/: __init__.py  edges.py  graph.py  nodes.py  state.py
RAG Agentic AI Tool/src/benchmarking/: __init__.py  chunker_bench.py  embedding_bench.py  leaderboard.py  reranker_bench.py  retriever_bench.py  runner.py
RAG Agentic AI Tool/src/chunking/: __init__.py  base.py  document_aware.py  fixed.py  parent_child.py  recursive.py  selector.py  semantic.py
RAG Agentic AI Tool/src/compression/: __init__.py  contextual.py  llm_compress.py  optimizer.py  redundancy.py
RAG Agentic AI Tool/src/core/: __init__.py  exceptions.py  interfaces.py  models.py  registry.py
RAG Agentic AI Tool/src/embeddings/: __init__.py  bge_m3.py  hf_embeddings.py  manager.py
RAG Agentic AI Tool/src/evaluation/: __init__.py  datasets.py  deepeval_eval.py  ir_metrics.py  ragas_eval.py  report.py
RAG Agentic AI Tool/src/indexing/: __init__.py  bm25_store.py  hybrid.py  manager.py  qdrant_store.py
RAG Agentic AI Tool/src/ingestion/: __init__.py  loader.py  pipeline.py
RAG Agentic AI Tool/src/llm/: __init__.py  factory.py  hf_client.py
RAG Agentic AI Tool/src/observability/: __init__.py  langsmith.py  logger.py
RAG Agentic AI Tool/src/query/: __init__.py  classifier.py  expander.py  hyde.py  step_back.py  transformer.py
RAG Agentic AI Tool/src/reranking/: __init__.py  bge_reranker.py  cross_encoder.py  manager.py
RAG Agentic AI Tool/src/retrieval/: __init__.py  dense.py  hybrid.py  metadata_filter.py  sparse.py  strategy.py
(+71 files in other folders)
