[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-retrieval-engine"
version = "1.0.0"
description = "Production-grade modular RAG retrieval engine for Agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shivansh Rana" },
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "langgraph",
    "langchain",
    "agentic-ai",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",

    # Vector store
    "qdrant-client>=1.12.0",

    # Embeddings & Reranking
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",

    # LLM serving
    "openai>=1.50.0",

    # Data & Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Utilities
    "structlog>=24.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",

    # Document loading
    "pypdf>=4.0",
    "python-docx>=1.0",
    "unstructured>=0.15.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
    "pandas>=2.2.0",
]
observability = [
    "langsmith>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6.0",
    "pre-commit>=3.8",
]
all = [
    "rag-retrieval-engine[eval,observability,dev]",
]

[project.scripts]
rag-benchmark = "scripts.run_benchmarks:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
